Wed Dec 10 05:30:54 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/emulab/generate-naomi-test-uuid-attribute.sh:

	  . Shell script that will generate the CUTS.test.uuid NAOMI attribute
	    given the summary output file.

Wed Dec 10 04:17:01 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/emulab/get-test-uuid-from-basic-summary.sh:

          . Shell script for getting the test UUID from a basic summary
            of a CUTS test run.

Wed Dec 10 03:54:32 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/emulab/generate-logging-client-map.sh:

          . Shell script that will generate a logging client map configuration
            file for the current Emulab experiment. The client map file is
            determined by resolving the candidate host from the following
            file:

              /var/emulab/boot/ltmap

            This file also assumes that the control node, i.e., the node
            with the name 'control' is not used, and does not add it to
            the map.

Tue Dec  9 22:00:47 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/testing/svcs/summary/Basic_Test_Summary_Impl.h:
        * cuts/utils/testing/svcs/summary/Basic_Test_Summary_Impl.cpp:
        * cuts/utils/testing/svcs/summary/Test_Summary_Impl.h:
        * cuts/utils/testing/svcs/summary/Test_Summary_Service.cpp:
        * cuts/utils/testing/svcs/summary/XML_Test_Summary_Impl.h:
        * cuts/utils/testing/svcs/summary/XML_Test_Summary_Impl.inl:
        * cuts/utils/testing/svcs/summary/XML_Test_Summary_Impl.cpp:

          . Implemented the XML format test summary generator.

          . Modified the generate () to take a reference to a CUTS_Testing_App_Base
            object, instead of a pointer.

Tue Dec  9 21:24:48 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MPC:
        * MPC/config:

          . Moved the MPC base project into the /MPC directory to be