@@ -1,9 +1,16 @@
+Wed Dec 10 05:51:33 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * etc/emulab/get-project-name.sh:
+
+	  . Shell script that will get the parent project's name for the 
+	    Emulab experiment.
+
 Wed Dec 10 05:30:54 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * etc/emulab/generate-naomi-test-uuid-attribute.sh:
 
-	  . Shell script that will generate the CUTS.test.uuid NAOMI attribute
-	    given the summary output file.
+          . Shell script that will generate the CUTS.test.uuid NAOMI attribute
+            given the summary output file.
 
 Wed Dec 10 04:17:01 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
